--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "next": "14.1.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0"
