--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
